WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67765
Crashed in WebCore::ApplyStyleCommand.doApply()
https://bugs.webkit.org/show_bug.cgi?id=67765
Summary
Crashed in WebCore::ApplyStyleCommand.doApply()
Shinya Kawanaka
Reported
2011-09-08 00:02:09 PDT
<card id="edit" contentEditable="true">A<script> edit.focus(); document.execCommand("SelectAll"); document.execCommand("RemoveFormat"); </script>
Attachments
Patch
(3.68 KB, patch)
2011-09-08 01:07 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Patch
(3.86 KB, patch)
2011-09-09 00:50 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2011-09-08 01:07:07 PDT
Created
attachment 106708
[details]
Patch
Shinya Kawanaka
Comment 2
2011-09-08 01:21:27 PDT
***
Bug 67766
has been marked as a duplicate of this bug. ***
Darin Adler
Comment 3
2011-09-08 08:46:40 PDT
Comment on
attachment 106708
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=106708&action=review
> LayoutTests/editing/style/remove-format-without-enclosing-block.html:9 > +document.writeln('<br><br>This test ensures WebKit does not crash.<br><br>PASS');
The wording here is wrong. The test does not ensure that WebKit does not crash. The test has no effect on WebKit. It's good to say that the test has passed if it doesn’t crash, and also probably good to say as clearly as possible why there was a time when the test would crash.
Shinya Kawanaka
Comment 4
2011-09-09 00:50:16 PDT
Created
attachment 106848
[details]
Patch
Shinya Kawanaka
Comment 5
2011-09-09 00:55:12 PDT
(In reply to
comment #3
)
> (From update of
attachment 106708
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=106708&action=review
> > > LayoutTests/editing/style/remove-format-without-enclosing-block.html:9 > > +document.writeln('<br><br>This test ensures WebKit does not crash.<br><br>PASS'); > > The wording here is wrong. The test does not ensure that WebKit does not crash. The test has no effect on WebKit.
Fixed.
> > It's good to say that the test has passed if it doesn’t crash, and also probably good to say as clearly as possible why there was a time when the test would crash.
I added some comments in a test case.
WebKit Review Bot
Comment 6
2011-09-09 02:01:42 PDT
Comment on
attachment 106848
[details]
Patch Clearing flags on attachment: 106848 Committed
r94840
: <
http://trac.webkit.org/changeset/94840
>
WebKit Review Bot
Comment 7
2011-09-09 02:01:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug